ajout de la fonction rechercher par code postal, tout fonctionne

--- a/my-app/src/components/App/styles.scss
+++ b/my-app/src/components/App/styles.scss
@@ -1,10 +1,10 @@
 @media only screen and (min-width: 800px) {
-  .App {
-    width: 50%;
-    justify-content: inherit;
+  .sectionMeteoWidget {
+    margin: auto 30em;
   }
 }
-.App {
+.sectionMeteoWidget {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
 }
