--- a/my-app/src/components/Form/styles.scss
+++ b/my-app/src/components/Form/styles.scss
@@ -16,4 +16,7 @@ form {
     border-style: dashed;
     border-radius: 0.3em;
     border-bottom: double;
+    &:active{
+      transform: scale(0.9);
+    }
 }
