supression du at dans le css pour le radial-gradient afin de le rend compatible safarie

--- a/my-app/src/index.scss
+++ b/my-app/src/index.scss
@@ -1,4 +1,4 @@
-body {
+html {
   font-family: 'Roboto', sans-serif;
   background: linear-gradient(320deg, lightskyblue, rgb(97, 172, 218), rgb(25, 108, 160));
   min-height: 100vh;
