--- a/my-app/src/components/Loader/style.scss
+++ b/my-app/src/components/Loader/style.scss
@@ -1,26 +1,36 @@
 .loader {
-  width: 175px;
-  height: 80px;
+  width: 10.93em;
+  height: 5em;
   display: block;
   margin: 10em auto 1em;
-  background-image: radial-gradient(circle 25px at 25px 25px, #FFF 100%, transparent 0), radial-gradient(circle 50px at 50px 50px, #FFF 100%, transparent 0), radial-gradient(circle 25px at 25px 25px, #FFF 100%, transparent 0), linear-gradient(#FFF 50px, transparent 0);
-  background-size: 50px 50px, 100px 76px, 50px 50px, 120px 40px;
-  background-position: 0px 30px, 37px 0px, 122px 30px, 25px 40px;
+  background-image: 
+    radial-gradient(circle 1.56em, #FFF 100%, transparent 0), 
+    radial-gradient(circle 3.5em, #FFF 90%, transparent 0),
+    radial-gradient(circle 1.56em, #FFF 100%, transparent 0), 
+    linear-gradient(#FFF 3.12em, transparent 0);
+  background-size: 3.12em 3.12em, 6.25em 6.30em, 3.12em 3.12em, 7.5em 2.5em;
+  background-position: 0em 1.87em, 2.31em 0em, 7.62em 1.87em, 1.56em 2.5em;
   background-repeat: no-repeat;
   position: relative;
   box-sizing: border-box;
 }
+
+// safari compatibility, at is not compatible  
+/*     radial-gradient(circle 1.56em at 1.56em 1.56em, #FFF 100%, transparent 0), 
+    radial-gradient(circle 3.12em at 3.12em 3.12em, #FFF 100%, transparent 0), 
+    radial-gradient(circle 1.56em at 1.56em 1.56em, #FFF 100%, transparent 0),  */
+
 .loader::after {
   content: '';  
   left: 0;
   right: 0;
   margin: auto;
-  bottom: 20px;
+  bottom: 1.25em;
   position: absolute;
-  width: 36px;
-  height: 36px;
+  width: 2.25em;
+  height: 2.25em;
   border-radius: 50%;
-  border: 5px solid transparent;
+  border: 0.31em solid transparent;
   border-color: #66B1DF transparent;
   box-sizing: border-box;
   animation: rotation 1s linear infinite;
