ajout de la gestion d'erreur via un message pour l'utilisateur en reponse a ça recherche

--- a/my-app/src/components/Form/Field/style.scss
+++ b/my-app/src/components/Form/Field/style.scss
@@ -4,11 +4,12 @@
   text-align: center;
   border-bottom-style: double;
   margin-left: .5em;
+
   &:focus {
     border: none;
   }
-}
 
-.inputZipCode::placeholder {
-  color: white;
+  &-placeholder {
+    color: white;
+  }
 }
