--- a/my-app/src/components/Form/styles.scss
+++ b/my-app/src/components/Form/styles.scss
@@ -23,12 +23,13 @@ form {
 
 .searchDone, .searchError {
   text-align: center;
-  text-shadow: .0em .0em .0em rgb(0, 0, 0);
-  font-family: serif;
+  text-shadow: .01em .01em .1em rgb(0, 0, 0);
+  font-family: sans-serif;
+  font-weight: bold;
 }
 
 .searchDone {
-  color: rgb(22, 186, 22);
+  color: rgb(13, 228, 13);
 }
 
 .searchError {
