--- a/my-app/src/components/App/styles.scss
+++ b/my-app/src/components/App/styles.scss
@@ -1,10 +1,30 @@
-@media only screen and (min-width: 1500px) {
-  .sectionMeteoWidget {
-    margin: auto 30em;
-  }
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
+
 .sectionMeteoWidget {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+}
+
+.topLogo {
+  width: 50%;
+}
+
+@media only screen and (min-width: 1500px) {
+  .sectionMeteoWidget {
+    margin: auto 30em;
+  }
+
+  .topLogo {
+    width: 10%;
+  }
+  
+  .App {
+    display: block;
+  }
 }
