--- a/my-app/src/components/App/styles.scss
+++ b/my-app/src/components/App/styles.scss
@@ -9,22 +9,92 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  flex-direction: column;
 }
 
-.topLogo {
-  width: 50%;
+.circle-plus {
+  margin: .3rem auto 2rem auto;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: .2rem solid white;
+  position: relative;
+  transition: transform 0.5s ease-in-out;
+  &:hover {
+    transform: scale(0.90);
+  }
 }
+
+.circle-plus:active {
+  transform: scale(1.3);
+}
+
+.circle-plus::before, .circle-plus::after {
+  content: "";
+  position: absolute;
+  width: 30%;
+  height: 2px;
+  background-color: white;
+}
+
+.circle-plus::before {
+  transform: rotate(90deg);
+}
+
+#moins::before {
+  transform: rotate(0deg);
+}
+
+
+@keyframes logoFade {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.4;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 
 @media only screen and (min-width: 1500px) {
   .sectionMeteoWidget {
     margin: auto 30em;
+    flex-direction: initial;
+  }
+
+  .circle-plus {
+    margin: 5rem 0rem 0em 1rem;
   }
 
   .topLogo {
     width: 10%;
   }
-  
+
   .App {
     display: block;
   }
+}
+
+@media only screen and (min-width: 800px) and (max-width: 1500px) {
+
+  .App {
+    display: block;
+  }
+
+  .sectionMeteoWidget {
+    justify-content: initial;
+    flex-direction: initial;
+  }
+
+  .circle-plus {
+    margin: 5rem 0rem 0em 1rem;
+  }
+
 }
